force-app/main/default/objects/vehicleBatch__c/vehicleBatch__c.object-meta.xml
<CustomObject>
    <label>Vehicle Batch</label>
    <nameField>
        <displayFormat>{YYYY}-B-{0000}</displayFormat>
        <label>Vehicle Batch ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>