force-app/main/default/objects/vehicleBatch__c/fields/Batch_Notes__c.field-meta.xml
<CustomField>
    <fullName>Batch_Notes__c</fullName>
    <description>internal notes, only procurement and re-marketing has access</description>
    <inlineHelpText>internal notes, only procurement and re-marketing has access</inlineHelpText>
    <label>Batch Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>