force-app/main/default/objects/vehicleBatch__c/fields/batchName__c.field-meta.xml
<CustomField>
    <fullName>batchName__c</fullName>
    <label>Batch Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>