force-app/main/default/objects/vehicleBatch__c/fields/bonusPrVehicle__c.field-meta.xml
<CustomField>
    <fullName>bonusPrVehicle__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bonus pr. vehicle</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>