force-app/main/default/objects/vehicleBatch__c/fields/deliveryDate__c.field-meta.xml
<CustomField>
    <fullName>deliveryDate__c</fullName>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>