force-app/main/default/objects/vehicleBatch__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>describe the reason for the batch</description>
    <inlineHelpText>describe the reason for the batch</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>