force-app/main/default/objects/vehicleBatch__c/fields/drivingLength__c.field-meta.xml
<CustomField>
    <fullName>drivingLength__c</fullName>
    <label>Driving Length</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>