force-app/main/default/objects/vehicleBatch__c/fields/Holding_Period__c.field-meta.xml
<CustomField>
    <fullName>Holding_Period__c</fullName>
    <description>minimum period (in months) for which we shall hold the vehicles, value from this field is copied to vehicles upon vehicles creation</description>
    <inlineHelpText>minimum period (in months) for which we shall hold the vehicles, value from this field is copied to vehicles upon vehicles creation</inlineHelpText>
    <label>Holding Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>