force-app/main/default/objects/vehicleBatch__c/fields/leasingCompany__c.field-meta.xml
<CustomField>
    <fullName>leasingCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Leasing Company there are financing and owning the car</description>
    <label>Leasing Company</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Please go back to the leasing company that you just created and choose the right type.</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Leasing Company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Batches</relationshipLabel>
    <relationshipName>Vehicle_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>