force-app/main/default/objects/vehicleBatch__c/fields/leasingLength__c.field-meta.xml
<CustomField>
    <fullName>leasingLength__c</fullName>
    <label>Leasing Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>