force-app/main/default/objects/vehicleBatch__c/fields/minimumKM__c.field-meta.xml
<CustomField>
    <fullName>minimumKM__c</fullName>
    <label>Minimum KM</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>