force-app/main/default/objects/vehicleBatch__c/fields/No_Deal_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Deal_Reason__c</fullName>
    <description>reason for No Deal or Cancelation</description>
    <inlineHelpText>reason for No Deal or Cancelation</inlineHelpText>
    <label>No Deal Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>