force-app/main/default/objects/vehicleBatch__c/fields/Number_Of_Not_Yet_Imported_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Not_Yet_Imported_Vehicles__c</fullName>
    <formula>Requested_Number_of_Vehicles__c -  Number_Of_Vehicles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Not Yet Imported Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>