force-app/main/default/objects/vehicleBatch__c/fields/Number_Of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Vehicles__c</fullName>
    <label>Number Of Vehicles</label>
    <summaryForeignKey>Vehicle__c.Vehicle_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>