force-app/main/default/objects/vehicleBatch__c/fields/Number_of_Vehicles_in_Defleet__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vehicles_in_Defleet__c</fullName>
    <description>Number of vehicles waiting to be defleeted</description>
    <inlineHelpText>number of vehicles waiting to be defleeted</inlineHelpText>
    <label>Number of Vehicles in Defleet</label>
    <summaryFilterItems>
        <field>Vehicle__c.Status__c</field>
        <operation>equals</operation>
        <value>Defleet</value>
    </summaryFilterItems>
    <summaryForeignKey>Vehicle__c.Vehicle_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>