force-app/main/default/objects/vehicleBatch__c/fields/Number_Of_Vehicles_in_Operations__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Vehicles_in_Operations__c</fullName>
    <description>number of vehicles that are currently available for operation</description>
    <inlineHelpText>number of vehicles that are currently available for operation</inlineHelpText>
    <label>Number Of Vehicles in Operations</label>
    <summaryFilterItems>
        <field>Vehicle__c.Status__c</field>
        <operation>equals</operation>
        <value>Operations</value>
    </summaryFilterItems>
    <summaryForeignKey>Vehicle__c.Vehicle_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>