force-app/main/default/objects/vehicleBatch__c/fields/Number_of_Vehicles_Sold__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vehicles_Sold__c</fullName>
    <description>number of vehicles already sold and transported to buyer</description>
    <inlineHelpText>number of vehicles already sold and transported to buyer</inlineHelpText>
    <label>Number of Vehicles Sold</label>
    <summaryFilterItems>
        <field>Vehicle__c.Status__c</field>
        <operation>equals</operation>
        <value>Sold</value>
    </summaryFilterItems>
    <summaryForeignKey>Vehicle__c.Vehicle_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>