force-app/main/default/objects/vehicleBatch__c/fields/numberOfMiniLeaseVehicles__c.field-meta.xml
<CustomField>
    <fullName>numberOfMiniLeaseVehicles__c</fullName>
    <label>Number of Mini Lease Vehicles</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>