force-app/main/default/objects/vehicleBatch__c/fields/numberOfNoTaxVehicles__c.field-meta.xml
<CustomField>
    <fullName>numberOfNoTaxVehicles__c</fullName>
    <label>Number of No Tax Vehicles</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>