force-app/main/default/objects/vehicleBatch__c/fields/numberOfStockVehicles__c.field-meta.xml
<CustomField>
    <fullName>numberOfStockVehicles__c</fullName>
    <label>Number of Stock Vehicle</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>