force-app/main/default/objects/vehicleBatch__c/fields/numberOfTaxVehicles__c.field-meta.xml
<CustomField>
    <fullName>numberOfTaxVehicles__c</fullName>
    <label>Number of Tax Vehicles</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>