force-app/main/default/objects/vehicleBatch__c/fields/numberOfVehicles__c.field-meta.xml
<CustomField>
    <fullName>numberOfVehicles__c</fullName>
    <formula>numberOfMiniLeaseVehicles__c  +  numberOfNoTaxVehicles__c  +  numberOfTaxVehicles__c  +   numberOfStockVehicles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>