force-app/main/default/objects/vehicleBatch__c/fields/OLD_Selected_Operating_Period__c.field-meta.xml
<CustomField>
    <fullName>OLD_Selected_Operating_Period__c</fullName>
    <description>For how long we would like have the vehicles from the batch in operations. Value is coming from calculations.</description>
    <inlineHelpText>For how long we would like have the vehicles from the batch in operations. Value is coming from calculations.</inlineHelpText>
    <label>(OLD)Selected Operating Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>