force-app/main/default/objects/vehicleBatch__c/fields/Requested_DK_Mini_lease__c.field-meta.xml
<CustomField>
    <fullName>Requested_DK_Mini_lease__c</fullName>
    <description>Number of Vehicles from this batch that are planned to be used as DK vehicle with use type Mini-lease.</description>
    <inlineHelpText>Number of Vehicles from this batch that are planned to be used as DK vehicle with use type Mini-lease.</inlineHelpText>
    <label>Requested DK – Mini-lease</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>