force-app/main/default/objects/vehicleBatch__c/fields/Requested_DK_Short_term__c.field-meta.xml
<CustomField>
    <fullName>Requested_DK_Short_term__c</fullName>
    <description>Number of Vehicles from this batch that are planned to be used as DK vehicle with use type Short-term.</description>
    <inlineHelpText>Number of Vehicles from this batch that are planned to be used as DK vehicle with use type Short-term.</inlineHelpText>
    <label>Requested DK – Short-term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>