force-app/main/default/objects/vehicleBatch__c/fields/Requested_Number_of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Requested_Number_of_Vehicles__c</fullName>
    <description>how many vehicles we would like to buy</description>
    <inlineHelpText>how many vehicles we would like to buy</inlineHelpText>
    <label>Requested Number of Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>