force-app/main/default/objects/vehicleBatch__c/fields/Requested_Valuta_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Requested_Valuta_Vehicles__c</fullName>
    <description>Number of Vehicles from this batch that are planned to be used as Valuta vehicle.</description>
    <inlineHelpText>Number of Vehicles from this batch that are planned to be used as Valuta vehicle.</inlineHelpText>
    <label>Requested Valuta Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>