force-app/main/default/objects/vehicleBatch__c/fields/Required_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_by_Date__c</fullName>
    <description>This is the date, set by Sixt, when the car is needed from the dealer. The date is negotiable, so really just a &quot;wish&quot; or guidance.</description>
    <inlineHelpText>This is the date, set by Sixt, when the car is needed from the dealer.</inlineHelpText>
    <label>Required by Date</label>
    <type>Date</type>
</CustomField>