force-app/main/default/objects/vehicleBatch__c/fields/Selected_Batch_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Selected_Batch_Calculator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>no longer required, user shall be able to select several calculators</description>
    <label>Selected Batch Calculator</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Batch_Calculator__c.Status__c</field>
            <operation>equals</operation>
            <value>Selected</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Batch_Calculator__c</referenceTo>
    <relationshipLabel>Vehicle Batches</relationshipLabel>
    <relationshipName>Vehicle_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>