force-app/main/default/objects/vehicleBatch__c/fields/Shortest_Holding_Period__c.field-meta.xml
<CustomField>
    <fullName>Shortest_Holding_Period__c</fullName>
    <description>shortest holding period from all Selected calculators, in months</description>
    <inlineHelpText>shortest holding period from all Selected calculators, in months</inlineHelpText>
    <label>Shortest Holding Period</label>
    <summarizedField>Batch_Calculator__c.Period__c</summarizedField>
    <summaryFilterItems>
        <field>Batch_Calculator__c.Status__c</field>
        <operation>equals</operation>
        <value>Selected</value>
    </summaryFilterItems>
    <summaryForeignKey>Batch_Calculator__c.batch_relationship__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>