force-app/main/default/objects/vehicleBatch__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No deal</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
                <default>true</default>
                <label>Offer</label>
            </value>
            <value>
                <fullName>Deal - Waiting for details</fullName>
            </value>
            <value>
                <fullName>Deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>