force-app/main/default/objects/vehicleBatch__c/fields/Status_Field__c.field-meta.xml
<CustomField>
    <fullName>Status_Field__c</fullName>
    <label>Status Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Deal</fullName>
            </value>
            <value>
                <fullName>No deal</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>