force-app/main/default/objects/vehicleBatch__c/fields/System_Number_of_Selected_Calculations__c.field-meta.xml
<CustomField>
    <fullName>System_Number_of_Selected_Calculations__c</fullName>
    <description>used for validation that only 1 calculation is selected</description>
    <label>(System) Number of Selected Calculations</label>
    <summaryFilterItems>
        <field>Batch_Calculator__c.Status__c</field>
        <operation>equals</operation>
        <value>Selected</value>
    </summaryFilterItems>
    <summaryForeignKey>Batch_Calculator__c.batch_relationship__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>