force-app/main/default/objects/vehicleBatch__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>to split batches that are from standard process and batches used for special purposes, like exchange cars from AutoDesktop</description>
    <inlineHelpText>to split batches that are from standard process and batches used for special purposes, like exchange cars from AutoDesktop</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>