force-app/main/default/objects/vehicleBatch__c/fields/Vehicle_Group__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>NO LONGER REQUIRED as batch can include several groups
we are buying vehicles for this Vehicle Group</description>
    <inlineHelpText>we are buying vehicles for this Vehicle Group</inlineHelpText>
    <label>Vehicle Group</label>
    <referenceTo>Vehicle_Group__c</referenceTo>
    <relationshipLabel>Vehicle Batches</relationshipLabel>
    <relationshipName>Vehicle_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>