force-app/main/default/objects/vehicleBatch__c/fields/vehicleBrandAndModel__c.field-meta.xml
<CustomField>
    <fullName>vehicleBrandAndModel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle Brand and Model</label>
    <referenceTo>vehiclePossibilities__c</referenceTo>
    <relationshipLabel>Vehicle Batches</relationshipLabel>
    <relationshipName>Vehicle_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>