force-app/main/default/objects/vehicleBatch__c/fields/vehicleBuyer__c.field-meta.xml
<CustomField>
    <fullName>vehicleBuyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Buyer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Go back to the account you just created for the Vehicle Buyer</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Vehicle Buyer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Batches (Vehicle Buyer)</relationshipLabel>
    <relationshipName>Vehicle_Batches2</relationshipName>
    <type>Lookup</type>
</CustomField>