force-app/main/default/objects/vehicleBatch__c/fields/vehicleImporter__c.field-meta.xml
<CustomField>
    <fullName>vehicleImporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Importer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Vehicle Importer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Batches (Vehicle Importer)</relationshipLabel>
    <relationshipName>Vehicle_Batches3</relationshipName>
    <type>Lookup</type>
</CustomField>