force-app/main/default/objects/vehicleBatch__c/fields/vehicleSeller__c.field-meta.xml
<CustomField>
    <fullName>vehicleSeller__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Vehicle Seller is the company there sold the car to the company</description>
    <label>Dealer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Vehicle Seller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Batches (Vehicle Seller)</relationshipLabel>
    <relationshipName>Vehicle_Batches1</relationshipName>
    <type>Lookup</type>
</CustomField>