force-app/main/default/objects/vehicleBatch__c/recordTypes/Vehicle_Batch_Buying.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Batch_Buying</fullName>
    <active>true</active>
    <label>Vehicle Batch Buying</label>
</RecordType>