force-app/main/default/objects/vehicleBatch__c/validationRules/Mandatory_Deal_ExpectedDeliveryDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Deal_ExpectedDeliveryDate</fullName>
    <active>true</active>
    <description>Expected Delivery Date needs to be populated before batch can be moved to Deal status</description>
    <errorConditionFormula>OR(
			ISPICKVAL(Status__c, &quot;Deal&quot;),
			ISPICKVAL(Status__c, &quot;Deal - Waiting for details&quot;)
)
&amp;&amp;
ISBLANK(deliveryDate__c)</errorConditionFormula>
    <errorDisplayField>deliveryDate__c</errorDisplayField>
    <errorMessage>Expected Delivery Date need to be populated before batch can be moved to Deal status!</errorMessage>
</ValidationRule>