force-app/main/default/objects/vehicleBatch__c/validationRules/Mandatory_Deal_Vehicle_Dealer.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Deal_Vehicle_Dealer</fullName>
    <active>true</active>
    <description>Dealer must be selected before mark a batch as Deal</description>
    <errorConditionFormula>OR(
			ISPICKVAL(Status__c, &quot;Deal&quot;),
			ISPICKVAL(Status__c, &quot;Deal - Waiting for details&quot;)
)
&amp;&amp;
ISBLANK(vehicleSeller__c)</errorConditionFormula>
    <errorDisplayField>vehicleSeller__c</errorDisplayField>
    <errorMessage>Dealer need to be selected before batch is marked as Deal</errorMessage>
</ValidationRule>