force-app/main/default/objects/vehicleBatch__c/validationRules/Mandatory_Waiting_Calculation_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Waiting_Calculation_Selected</fullName>
    <active>true</active>
    <description>One batch calculation have to be selected before we can move to Deal</description>
    <errorConditionFormula>System_Number_of_Selected_Calculations__c = 0
	&amp;&amp; ISPICKVAL(Status__c, &quot;Deal&quot;)</errorConditionFormula>
    <errorMessage>Please select one calculation before move to Deal!</errorMessage>
</ValidationRule>